# libusb

./: .gitignore  CMakeLists.txt
libusb/: CMakeLists.txt  config.cmake  libusb-1.0.pc.in
libusb/os/: CMakeLists.txt
